  * hurd-i386/local-pthread_posix-option.diff: put back to series.
  * hurd-i386/local-check_native.diff: new patch to provide a dummy
    __check_native() function.
  * hurd-i386/cvs-get_pc_thunk.diff: new patch to fix missing
    __i686.get_pc_thunk.bx reference.
  * hurd-i386/submitted-dl-sysdep.diff: new patch to fix static linking.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 29 Jan 2009 16:47:14 +0100

glibc (2.8+20080809-3) experimental; urgency=low

  [ Aurelien Jarno ]
  * New upstream release.
    - Fix conversions to ISO-2022-JP.  Closes: #466340.
    - "Tarballs are a completely outdated concept":
      + use a flat .orig.tar.gz
      + rules.d/tarball.mk: remove all, add a get-orig-source target
      + rules.d/quilt.mk: fix the unpatch target
    - Update any/cvs-getaddrinfo.diff.
    - Update any/submitted-i686-timing.diff.
    - Update hurd-i386/cvs-lock-memory-clobber.diff.
    - Update kfreebsd/local-sys_queue_h.diff
    - Update locale/preprocessor-collate-uli-sucks.diff
    - Update localedata/tailor-iso14651_t1.diff.
    - Update localedata/locales-fr.diff.
    - Update localedata/cy_GB-first_weekday.diff.
    - Update localedata/fr_BE-first_weekday.diff.
    - Update localedata/fr_CA-first_weekday.diff.
    - Update localedata/fr_CH-first_weekday.diff.
    - Update localedata/fr_LU-first_weekday.diff.
    - Remove alpha/submitted-xstat.diff (outdated).
    - Remove amd64/cvs-vdso_clock_gettime.diff (merged).
    - Remove arm/cvs-ioperm.diff (merged). 
    - Remove arm/cvs-gcc4-inline.diff (merged).
    - Remove arm/local-args6.diff (merged).
    - Remove arm/submitted-RTLD_SINGLE_THREAD_P.diff (merged).
    - Remove hppa/cvs-atomic.diff (merged).
    - Remove hppa/cvs-lowlevellock.diff (merged).
    - Remove hurd-i386/cvs-kernel-features.diff (merged).
    - Remove hurd-i386/cvs-O_CLOEXEC_fix.diff (merged).
    - Remove hurd-i386/cvs-epfnosupport.diff (merged).
    - Remove hurd-i386/cvs-df.diff (merged).