@@ -9,25 +9,22 @@ This patch is incomplete.  Reported on
 
 --- a/sysdeps/mach/hurd/xstatconv.c
 +++ b/sysdeps/mach/hurd/xstatconv.c
-@@ -42,12 +42,21 @@
+@@ -42,12 +42,12 @@
    buf->st_uid = buf64->st_uid;
    buf->st_gid = buf64->st_gid;
    buf->st_size = buf64->st_size;
-+#ifdef __USE_MISC /* TODO.  Hm.  */
+-  buf->st_atime = buf64->st_atime;
+-  buf->st_atime_usec = buf64->st_atime_usec;
+-  buf->st_mtime = buf64->st_mtime;
+-  buf->st_mtime_usec = buf64->st_mtime_usec;
+-  buf->st_ctime = buf64->st_ctime;
+-  buf->st_ctime_usec = buf64->st_ctime_usec;
 +  buf->st_atim.tv_sec = buf64->st_atim.tv_sec;
 +  buf->st_atim.tv_nsec = buf64->st_atim.tv_nsec;
 +  buf->st_mtim.tv_sec = buf64->st_mtim.tv_sec;
 +  buf->st_mtim.tv_nsec = buf64->st_mtim.tv_nsec;
 +  buf->st_ctim.tv_sec = buf64->st_ctim.tv_sec;
 +  buf->st_ctim.tv_nsec = buf64->st_ctim.tv_nsec;
-+#else
-   buf->st_atime = buf64->st_atime;
-   buf->st_atime_usec = buf64->st_atime_usec;
-   buf->st_mtime = buf64->st_mtime;
-   buf->st_mtime_usec = buf64->st_mtime_usec;
-   buf->st_ctime = buf64->st_ctime;
-   buf->st_ctime_usec = buf64->st_ctime_usec;
-+#endif
    buf->st_blksize = buf64->st_blksize;
    buf->st_blocks = buf64->st_blocks;
    buf->st_author = buf64->st_author;
@@ -96,24 +93,9 @@ This patch is incomplete.  Reported on
  
      __blksize_t st_blksize;	/* Optimal size for I/O.  */
  
-@@ -127,7 +164,8 @@
-   };
- #endif
- 
--#define	_STATBUF_ST_BLKSIZE	/* Tell code we have this member.  */
-+/* Tell code we have these members.  */
-+#define	_STATBUF_ST_BLKSIZE
- 
- /* Encoding of the file mode.  */
- 
-@@ -138,23 +176,24 @@
- #define	__S_IFCHR	0020000	/* Character device.  */
- #define	__S_IFBLK	0060000	/* Block device.  */
- #define	__S_IFREG	0100000	/* Regular file.  */
-+#define	__S_IFIFO	0010000	/* FIFO.  */
- #define	__S_IFLNK	0120000	/* Symbolic link.  */
+@@ -141,10 +178,11 @@
  #define	__S_IFSOCK	0140000	/* Socket.  */
--#define	__S_IFIFO	0010000	/* FIFO.  */
+ #define	__S_IFIFO	0010000	/* FIFO.  */
  
 -/* POSIX.1b objects.  */
 -#define __S_TYPEISMQ(buf) (0)
@@ -127,15 +109,3 @@ This patch is incomplete.  Reported on
  
  /* Protection bits.  */
  
- #define	__S_ISUID	04000	/* Set user ID on execution.  */
- #define	__S_ISGID	02000	/* Set group ID on execution.  */
- #define	__S_ISVTX	01000	/* Save swapped text after use (sticky).  */
--#define	__S_IREAD	00400	/* Read by owner.  */
--#define	__S_IWRITE	00200	/* Write by owner.  */
--#define	__S_IEXEC	00100	/* Execute by owner.  */
-+#define	__S_IREAD	0400	/* Read by owner.  */
-+#define	__S_IWRITE	0200	/* Write by owner.  */
-+#define	__S_IEXEC	0100	/* Execute by owner.  */
- 
- 
- #ifdef	__USE_GNU
