@@ -111,6 +111,7 @@ glibc (2.9-0exp2) UNRELEASED; urgency=low
   * hurd-i386/cvs-get_pc_thunk.diff: new patch to fix missing
     __i686.get_pc_thunk.bx reference.
   * hurd-i386/submitted-dl-sysdep.diff: new patch to fix static linking.
+  * hurd-i386/submitted-stat.diff: clean up patch.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 29 Jan 2009 16:47:14 +0100
 
